Color Contrast fixes

--- a/roc-candy.css
+++ b/roc-candy.css
@@ -340,3 +340,6 @@ pre, code.CodeSnippet {color:var(--DefaultRedColor);}
 
 #BuddyChatPromoColumn {background: #fc4b7f !important;}
 body:not([data-_ssecondarynavmode="Float"]) > wrapper > #SecondaryNav > wrapper {margin-left:-2.5px;}
+
+/*contrast fix*/
+.TitleOnly > ul > li itemcount {color:#ff9bcf !important;}
